@@ -9,6 +9,8 @@ BUG FIXES:
 	- Fix per-zone query class statistics.
 	- Fixes for wildcard addition and deletion.
 	- Fixes to zonec origin and b64 read (like in NSD 4.1.2).
+	- Fix tcp waiting list for zone transfers where the bind and connect
+	  calls fail. (like in NSD 4.1.2)
 
 
 3.2.18
