@@ -1,5 +1,7 @@
 24 April 2015: Wouter
 	- Fixes to zonec origin and b64 read (like in NSD 4.1.2).
+	- Fix tcp waiting list for zone transfers where the bind and connect
+	  calls fail. (like in NSD 4.1.2)
 
 20 January 2015: Wouter
 	- Synthesize CNAMEs with same TTL as DNAME.
